Add initial version of loading information from message template for ISBN identifier related processes
